Update .gitignore for Java

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Created by https://www.gitignore.io/api/c++,python
+# Created by https://www.gitignore.io/api/c++,python,java
 
 ### C++ ###
 # Compiled Object files
@@ -90,3 +90,19 @@ docs/_build/
 
 # PyBuilder
 target/
+
+
+### Java ###
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
