--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,5 +108,6 @@
         "stacktrace": "cpp",
         "stop_token": "cpp",
         "syncstream": "cpp"
-    }
+    },
+    "editor.formatOnSave": true
 }
